<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp">


        <TextView
            android:id="@+id/txt_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="총 "
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/txt_01"
            android:text="00000"
            android:textColor="#F15F5F"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/txt_02"
            android:text=" 권의 도서가 존재합니다."
            android:textSize="18dp" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_01"
            android:text="서울애니메이션센터 만화의집 도서 검색 애플리케이션 "
            android:textSize="@dimen/subtitle_text_size" />

        <customview.ZoomImgView
            android:id="@+id/map_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subtitle"
            android:layout_marginTop="10dp" />
    </RelativeLayout>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/info_layout"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/divider_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_04"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/home_00"
            android:textSize="@dimen/main_info_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/divider_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/home_01"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/number_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/map_image_view"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:text="@string/home_03"
            android:textSize="@dimen/main_info_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/home_02"
            android:textSize="@dimen/main_info_text_size" />


    </LinearLayout>
</RelativeLayout>